src/test/resources/tests/typeError/missingStruct.qg

init {
    var = new missingStruct(1)
}

run true

input(a,b) true

struct aStruct {
    aVal: number
}